# BrickGame

./: Makefile  README.md  requirements.txt
brick_game/common/: cgame.pxd  common.h  interface.py
brick_game/race/: game.py  test_race.py
brick_game/server/: server.py
brick_game/snake/: game.pyx  setup.py
brick_game/snake/controller/: controller.cc  controller.h
brick_game/snake/model/: model.cc  model.h
brick_game/tetris/: figures.c  fsm.c  game.pyx  setup.py  tetris.c
brick_game/tetris/inc/: figures.h  fsm.h  objects.h  tetris.h
brick_game/web_gui/: game.js  index.html  styles.css
brick_game/web_gui/src/: config.js  game-board.js
dvi/: description.tex
gui/cli/: brick_game_cli.c  brick_game_cli.h  game_adapter.cc  game_adapter.h  game_interface.cc  game_interface.h  race_loop.cc  race_loop.h  snake_loop.cc  snake_loop.h  tetris_loop.c  tetris_loop.h
gui/desktop/: CMakeLists.txt  gamewidget.cc  gamewidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  racewidget.cc  racewidget.h  snakewidget.cc  snakewidget.h  tetriswidget.cc  tetriswidget.h
gui/requests/: race_requests.cc  race_requests.h
unit_tests/: snake_tests.cpp  test_snake.h  test_tetris.h  testing.c  testing.cpp  tetris_tests.c
